--- a/Cap3/DOM/index.html
+++ b/Cap3/DOM/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <main>
+<body class="ativo">
+    <main class="ovo listas" id="oval">
         <ul>
-            <li id="lista"></li>
-            <li id="lista"></li>
-            <li id="lista"></li>
-            <li id="lista"></li>
+            <li id="lista">Eu</li>
+            <li id="lista">estou</li>
+            <li id="lista">dentro</li>
+            <li id="lista">da</li>
+            <li id="lista">tag</li>
+            <li id="lista">main</li>
         </ul>
     </main>
 </body>
