--- a/Cap3/primeiroProjeto/index.html
+++ b/Cap3/primeiroProjeto/index.html
@@ -105,10 +105,10 @@
           <img src="img/mapa.png" alt="">
         </div>
         <div class="contato">
-          <p><span class="q"></span>stras3pp@gmail.com</p>
-          <p><span class="q"></span>+55 64 99245-3132</p>
+          <p><span class="q "></span>stras3pp@gmail.com</p>
+          <p><span class="q a"></span>+55 64 99245-3132</p>
           <p><span class="q"></span>Rua do Conde, n° 21</p>
-          <p><span class="q"></span>São Paulo - SP</p>
+          <p><span class="q b"></span>São Paulo - SP</p>
         </div>
     
     <footer>
