--- a/Cap3/SelecaoDeElementos/index.html
+++ b/Cap3/SelecaoDeElementos/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="imgs">
-      <section>
+      <section id="pegar">
         <img src="img/imagem1.jpg" alt="">
         <img src="img/imagem2.jpg" alt="">
         <img src="img/imagem3.jpg" alt="">
@@ -35,7 +35,7 @@
     </div>
     <main class="primario">
 
-        <h2 style="margin-top: 0;" id="pegar"><span class="m"></span>Raposa</h2>
+        <h2 style="margin-top: 0;"><span class="m"></span>Raposa</h2>
         <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
           por um focinho comprido e uma cauda longa e peluda.</p>
         <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
@@ -60,7 +60,7 @@
         <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
 
         <h2><span class="m"></span>Lobo</h2>
-        <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
+        <p id="pegar">As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
           por um focinho comprido e uma cauda longa e peluda.</p>
         <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
         <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do
@@ -116,5 +116,6 @@
     </footer>
 
     <script src="script.js"></script>
+    
 </body>
 </html>
