--- a/Cap3/SelecaoDeElementos/index.html
+++ b/Cap3/SelecaoDeElementos/index.html
@@ -10,10 +10,10 @@
 <body>
     <header>
         <menu>
-          <a href="">Animais</a>
-          <a href="">Faq</a>
-          <a href="">Contato</a>
-          <a href="">Dev <i class="material-symbols-outlined">arrow_forward</i></a>
+          <a href="#">Animais</a>
+          <a href="#">Faq</a>
+          <a href="#">Contato</a>
+          <a href="https://github.com/Ex-Stras">Dev <i class="material-symbols-outlined">arrow_forward</i></a>
         </menu>
     </header>
     <div class="title1">
@@ -114,6 +114,19 @@
     <footer>
       <p>Todos os direitos reservados.</p>
     </footer>
+
+    <dl>
+      <p class="title3">A</p>
+      <p class="title3">B</p>
+      <p class="title3">C</p>
+      <p class="title3">D</p>
+      <p class="title3">E</p>
+      <dt class="title3">F</dt>
+      <dt class="title3">G</dt>
+      <dt class="title3">H</dt>
+      <dt class="title3">I</dt>
+      <dt class="title3">J</dt>
+    </dl>
 
     <script src="script.js"></script>
     
