--- a/Cap3/classes&atributos/index.html
+++ b/Cap3/classes&atributos/index.html
@@ -10,10 +10,10 @@
 <body>
     <header>
         <menu>
-          <a href="">Animais</a>
-          <a href="">Faq</a>
-          <a href="">Contato</a>
-          <a href="">Dev <i class="material-symbols-outlined">arrow_forward</i></a>
+          <a href="#">Animais</a>
+          <a href="#">Faq</a>
+          <a href="#">Contato</a>
+          <a href="https://github.com/Ex-Stras">Dev <i class="material-symbols-outlined">arrow_forward</i></a>
         </menu>
     </header>
     <div class="title1">
