--- a/Cap3/Eventos/index.html
+++ b/Cap3/Eventos/index.html
@@ -10,13 +10,13 @@
 <body>
     <header>
         <menu>
-          <a href="">Animais</a>
-          <a href="">Faq</a>
-          <a href="">Contato</a>
+          <a href="#animais">Animais</a>
+          <a href="#faq">Faq</a>
+          <a href="#contato">Contato</a>
           <a href="https://www.cursoemvideo.com/">Dev <i class="material-symbols-outlined">arrow_forward</i></a>
         </menu>
     </header>
-    <div class="title1">
+    <div class="title1" id="animais">
         <h1>
            <span>ANIMAIS</span> 
            <span>FANTÁSTICOS</span> 
@@ -84,7 +84,7 @@
         <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
     </main>
    
-        <div class="title2">
+        <div class="title2" id="faq">
           <h1>FAQ</h1>
         </div>
         <div class="faq">
@@ -98,7 +98,7 @@
         <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
         </div>
 
-        <div class="title3">
+        <div class="title3" id="contato">
           <h1>Contato</h1>
         </div>
         <div class="imgc">
